test/negative/feature_privatemethods.java

public class feature_privatemethods {
  public feature_privatemethods() {}
  private int m() {
    return 42;
  }
}

